--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,14 @@
+/* Colors indicated by Odin Project */
 :root {
-    --background-color: #232831;
-    --box-color: #2E3440;
-    --font-color: #5D84A6;
-    --link-color: #8FCBD9;
-    --accent-color: #A886A7;
+    --dark-background-color: #1F2937;
+    --hero-background-color: #1F2937;
+    --hero-secondary-text: #E5E7EB;
+    --header-logo-text: #F9FAF8;
+    --button-color: #3882F6;
+    --call-background: #3882F6;
+    --information-header-text: #1F2937;
+    --quote-section-background: #E5E7EB;
+    --quote-text: #1F2937;
 }
 
 html {
@@ -11,223 +16,247 @@ html {
     box-sizing: border-box;
 }
 
-body {
-    background-color: var(--background-color);
-    color: var(--font-color);
-    height: 100vh;
-    width: 100%;
-}
-
 *,
 *:before,
 *:after {
     /* Use box sizing for all */
     box-sizing: inherit;
+}
+
+* {
     margin: 0;
     padding: 0;
 }
 
-.page-container {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    margin: 0;
-    padding: 0;
-    background-image: url("../media/background.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: fixed;
-    overflow: scroll;
-}
-
-.content-box {
+body {
     display: flex;
     flex-direction: column;
-    /* background-color: var(--box-color); */
-    background-color: rgba(46, 52, 64, 0.9);
-    margin: auto;
-    z-index: 2;
-    width: 1000px;
-    border: 3px solid var(--font-color);
-
-    -webkit-animation: fadein 2s;
-    /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: fadein 2s;
-    /* Firefox < 16 */
-    -ms-animation: fadein 2s;
-    /* Internet Explorer */
-    -o-animation: fadein 2s;
-    /* Opera < 12.1 */
-    animation: fadein 2s;
+    width: 100vw;
+    background-image:
+        linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)),
+        url('../media/vikingback.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
 }
 
-.row {
+.size-container {
     display: flex;
-    flex-direction: row;
-    width: 100%;
+    justify-content: space-between;
+    max-width: 75%;
     margin: auto;
     padding: 25px;
-    gap: 50px;
-    justify-content: center;
+    gap: 25px;
 }
 
-.row a {
-    text-decoration: none;
-    color: var(--link-color);
-}
-
-.row a:hover {
-    color: var(--accent-color);
-}
-
-.row ul {
-    list-style: none;
+.size2-container {
     display: flex;
+    max-width: 80%;
+    margin: auto;
+    gap: 25px;
+}
+
+.header-container {
+    position: fixed;
+    display: flex;
+    width: 100%;
+    background-color: var(--dark-background-color);
+    color: var(--header-logo-text);
+    height: 5vh;
+}
+
+.size-container-header {
+    display: flex;
+    max-width: 75%;
+    gap: 25px;
+    margin: auto;
+    flex: 1;
+    justify-content: space-between;
+}
+
+.hero-container {
+    display: flex;
+    background-color: var(--dark-background-color);
+    color: var(--header-logo-text);
+    height: 100vh;
+}
+
+#hero-image {
+    flex: 1;
+    align-self: center;
+}
+
+#hero-image img {
+    width: 100%;
+    height: auto;
+    border: #E5E7EB 3px solid;
+    box-shadow: 0 4px 8px 0 rgba(167, 163, 163, 0.2), 0 6px 20px 0 rgba(179, 173, 173, 0.19);
+}
+
+#hero-button {
+    align-self: flex-start;
+    background-color: var(--button-color);
+    padding: 8px;
+    border-radius: 10px;
+    transition: all 400ms cubic-bezier(.47, 1.64, .41, .8);
+}
+
+#hero-button:hover {
+    transform: scale(1.1);
+}
+
+#hero-p {
+    font-size: 18px;
+    color: #E5E7EB;
+
+}
+
+#nav-list {
+    display: flex;
+    list-style-type: none;
     gap: 10px;
 }
 
-.gofundme {
-    flex: 1;
+#nav-list li {
+    border: solid 2px #000000;
+    border-radius: 5px;
+    padding: 5px;
+    background-color: var(--header-logo-text);
+    color: var(--dark-background-color);
+    box-shadow: 0 4px 8px 0 rgba(167, 163, 163, 0.2), 0 6px 20px 0 rgba(179, 173, 173, 0.19);
+    transition: all 400ms cubic-bezier(.47, 1.64, .41, .8);
+}
+
+#nav-list li:hover {
+    transform: scale(1.1);
+}
+
+.info-container {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    color: var(--header-logo-text);
+}
+
+#info-title {
+    font-size: 36px;
+    font-weight: bolder;
+    flex: 1;
+    text-align: center;
+}
+
+.info-image {
+    border: solid 4px var(--call-background);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: var(--hero-secondary-text);
+    width: 100%;
+    height: auto;
+    transition: all 400ms cubic-bezier(.47, 1.64, .41, .8);
+}
+
+.info-image:hover {
+    transform: scale(1.05);
+}
+
+.info-image img {
+    width: 100%;
+    height: auto;
+}
+
+.quote-container {
+    display: flex;
+    background-color: var(--quote-section-background);
+    height: 60vh;
+}
+
+#quote {
+    width: 100%;
+    align-self: center;
+    text-align: center;
+    padding: 100px;
+}
+
+#quote-source {
+    margin-top: -100px;
+    align-self: flex-end;
+    margin-bottom: 75px;
+}
+
+#call-box {
+    display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    gap: 20px;
+    flex: 1;
+    background-color: var(--call-background);
+    padding: 50px;
+    color: #FFFFFF;
+    border-radius: 10px;
+    gap: 50px;
 }
 
-.gfm-embed {
-    width: fit-content;
-}
-
-.bio-content {
-    text-align: center;
+.sign-col-container {
     display: flex;
     flex-direction: column;
-    margin: auto;
-    gap: 30px;
+}
+
+#sign-up-button {
+    border: 2px solid #ffffff;
+    border-radius: 10px;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    transition: all 400ms cubic-bezier(.47, 1.64, .41, .8);
+}
+
+#sign-up-button:hover {
+    transform: scale(1.1);
+}
+
+.col-container {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    flex: 1;
+    justify-content: center;
+}
+
+.col-container p {
+    flex: 1;
+}
+
+#hero-title {
+    font-size: 48px;
+    font-weight: bolder;
+}
+
+#logo {
     font-size: 24px;
 }
 
-#my-pic {
-    border-radius: 50%;
-    border: 3px solid var(--accent-color);
-    box-shadow: 0 15px 15px var(--background-color);
-    height: 500px;
+.hero-container,
+.info-container,
+.quote-container,
+.call-container {
+    padding-top: 70px;
+    padding-bottom: 70px;
 }
 
-.list-ul {
-    flex: 1;
+.call-container {
     display: flex;
-    justify-content: space-around;
+    background-color: #FFFFFF;
+    height: 35vh;
 }
 
-.list-ul a {
-    flex: 1;
-    text-decoration: none;
-    color: var(--link-color);
-    border: 3px solid var(--background-color);
-}
-
-.list-ul a:hover {
-    background-color: var(--background-color);
-    color: var(--accent-color);
-    border: 3px solid black;
-    box-shadow: 0 0 20px var(--accent-color);
-}
-
-.list-icon {
+.copy-container {
+    background-color: var(--hero-background-color);
+    color: var(--quote-section-background);
+    height: 5vh;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+}
+
+#copyright {
+    text-align: center;
     flex: 1;
-    padding: 5px;
-}
-
-.list-icon img {
-    width: 50px;
-    height: 50px;
-}
-
-@media (max-width:1025px) {
-    .row {
-        flex-direction: column;
-        width: 80%;
-    }
-
-    .content-box {
-        width: 80%;
-    }
-
-    #my-pic {
-        height: 200px;
-        width: 200px;
-        margin: auto;
-    }
-
-    .list-ul {
-        flex-flow: column wrap;
-    }
-
-    .background-watercolor {
-        background-size: cover;
-    }
-
-    #venmo-img {
-        width: 100%;
-        height: auto;
-    }
-
-    .content-box.venmo {
-        width: 100%;
-    }
-
-    .row.venmo {
-        width: 100%;
-    }
-}
-
-@keyframes fadein {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
 }
