--- a/css/styles.css
+++ b/css/styles.css
@@ -82,14 +82,14 @@ body {
 }
 
 #hero-image {
-  flex: 1;
+  width: 25%;
   align-self: center;
 }
 
 #hero-image img {
   width: 100%;
   height: auto;
-  border: #e5e7eb 3px solid;
+  /* border: #1d1d1b 3px solid; */
   box-shadow: 0 4px 8px 0 rgba(167, 163, 163, 0.2),
     0 6px 20px 0 rgba(179, 173, 173, 0.19);
 }
@@ -107,6 +107,7 @@ body {
 }
 
 #hero-p {
+  flex: 1;
   font-size: 18px;
   color: #1d1d1b;
 }
@@ -149,12 +150,11 @@ body {
 }
 
 .info-image {
-  flex: 1;
   border: solid 4px var(--call-background);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   background-color: var(--hero-secondary-text);
   width: 100%;
-  height: 40%;
+  height: 25%;
   transition: all 400ms cubic-bezier(0.47, 1.64, 0.41, 0.8);
 }
 
@@ -205,12 +205,24 @@ body {
 }
 
 #sign-up-button {
+  color: #ffffff;
+  text-decoration: none;
   border: 2px solid #ffffff;
   border-radius: 10px;
   padding: 5px;
   padding-left: 15px;
   padding-right: 15px;
   transition: all 400ms cubic-bezier(0.47, 1.64, 0.41, 0.8);
+}
+
+#sign-up-button a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+#sign-up-button a:visited {
+  color: #ffffff;
+  text-decoration: none;
 }
 
 #sign-up-button:hover {
