--- a/css/styles.css
+++ b/css/styles.css
@@ -107,9 +107,21 @@ body {
 }
 
 #hero-p {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  flex-direction: column;
   flex: 1;
   font-size: 18px;
   color: #1d1d1b;
+}
+
+.hero-p-p {
+  font-size: 16px;
+}
+
+#hero-p p {
+  font-size: 20px;
 }
 
 #nav-list {
@@ -118,7 +130,7 @@ body {
   gap: 10px;
 }
 
-#nav-list li {
+#nav-list li, #presentClick {
   border: solid 2px #000000;
   border-radius: 5px;
   padding: 5px;
@@ -129,7 +141,7 @@ body {
   transition: all 400ms cubic-bezier(0.47, 1.64, 0.41, 0.8);
 }
 
-#nav-list li:hover {
+#nav-list li:hover, #presentClick:hover {
   transform: scale(1.1);
 }
 
@@ -277,3 +289,5 @@ body {
   text-align: center;
   flex: 1;
 }
+
+
